<resources>
    <string name="app_name">UDeposits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Deposits</string>
    <string name="nav_header_subtitle">||||||||</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Выбрать валюту</string>
    <string name="menu_gallery">Таблица депозитов</string>
    <string name="menu_slideshow">Поиск</string>
    <string name="menu_tools">Калькулятор</string>
    <string name="menu_send">Графики</string>
    <string name="menu_share">Информация</string>

    <string name="UAH">UAH</string>
    <string name="USD">USD</string>
    <string name="EURO">EURO</string>

    <string name="bankName">Банк</string>
    <string name="percent">%</string>
    <string name="duration">Период</string>
    <string name="payout">Выплата</string>

    <string name="main">Выберите валюту</string>
    <string name="chooseBank">Название банка</string>
    <string name="details">Подробнее</string>
    <string name="period">Период</string>
    <string name="percentField">Процент</string>
    <string name="currency">Валюта</string>
</resources>
