<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    android:theme="@style/FontTheme">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="302dp"
        android:textSize="17dp"
        android:fontFamily="@font/font"
        android:text="дней"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/printPeriod2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="143dp"
        android:fontFamily="@font/font"
        android:text="@string/menu_slideshow"
        android:textSize="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/bankNames"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/currencyList"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="@font/font"
        android:text="@string/chooseBank"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="163dp"
        android:fontFamily="@font/font"
        android:text="@string/percentField"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyList" />

    <EditText
        android:id="@+id/printPercent"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="81dp"
        android:editable="true"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/printPercent2"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="81dp"
        android:editable="true"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="167dp"
        android:fontFamily="@font/font"
        android:text="@string/period"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printPercent" />

    <EditText
        android:id="@+id/printPeriod"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:editable="true"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/printPeriod2"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="81dp"
        android:editable="true"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/font"
        android:text="@string/payout"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printPeriod" />

    <Spinner
        android:id="@+id/payoutList"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="169dp"
        android:fontFamily="@font/font"
        android:text="@string/currency"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankNames" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="163dp"
        android:background="#B3E5FC"
        android:fontFamily="@font/font"
        android:onClick="search"
        android:text="@string/menu_slideshow"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:theme="@style/FontButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payoutList" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:textSize="17dp"
        android:fontFamily="@font/font"
        android:text="от"
        app:layout_constraintBottom_toTopOf="@+id/printPercent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:fontFamily="@font/font"
        android:textSize="17dp"
        android:text="от"
        app:layout_constraintBottom_toTopOf="@+id/printPeriod"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:textSize="17dp"
        android:layout_marginEnd="126dp"
        android:text="до"
        app:layout_constraintBottom_toTopOf="@+id/printPercent2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:layout_marginStart="12dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="59dp"
        android:textSize="17dp"
        android:text="%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/printPercent2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:layout_marginEnd="126dp"
        android:textSize="17dp"
        android:text="до"
        app:layout_constraintBottom_toTopOf="@+id/printPeriod2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>